--- a/docs/html/linuxcnc.css
+++ b/docs/html/linuxcnc.css
@@ -1,7 +1,8 @@
 :target { background: #DEF !important;  }
 tt {font-family: "Courier New", Courier, monospace; font-size: 0.95em;}
 pre { font-family: monospace !important; }
-h1, h2 { background: #c0c0f0; }
+h1, h2 { background: #c0c0f0; padding-left: 0.5em;}
+h2 { padding-top: 0.35em; padding-bottom:0.15em;}
 h1, h2, h3, h4, h5 { border-bottom: 2px solid #8080c0; color: black; }
 div.nav { float: right; background: #ffffff; }
 dt { font-weight: bold; }
@@ -47,3 +48,4 @@ figcaption.title {
 dt.hdlist1 {
 	font-weight: normal;
 }
+#footer { margin-top: 1em; border-top: 1px dashed silver;}
