--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -4416,6 +4416,10 @@ clicking on the DRO</property>
                                       <object class="GtkComboBoxText" id="cmb_mouse_button_mode">
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
+                                        <property name="active">0</property>
+                                        <property name="has-entry">True</property>
+                                        <property name="entry-text-column">1</property>
+                                        <property name="id-column">0</property>
                                         <items>
                                           <item id="0" translatable="yes">left rotate,  middle move,  right zoom</item>
                                           <item id="1" translatable="yes">left zoom,  middle move,  right rotate</item>
