--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -241,6 +241,10 @@
     <property name="can-focus">False</property>
     <property name="icon-name">edit-undo</property>
   </object>
+  <object class="GtkImage" id="img_edit_menu_calculator">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
   <object class="GtkImage" id="img_edit_menu_keyboard">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
@@ -314,6 +318,10 @@
     <property name="can-focus">False</property>
   </object>
   <object class="GtkImage" id="img_machine_on">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
+  <object class="GtkImage" id="img_macro_menu_calculator">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
   </object>
@@ -7309,16 +7317,23 @@ MDI history</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="lbl_space_9">
+                  <object class="GtkButton" id="btn_calc">
+                    <property name="use-action-appearance">False</property>
                     <property name="width-request">90</property>
                     <property name="height-request">56</property>
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
+                    <property name="receives-default">False</property>
+                    <property name="tooltip-text" translatable="yes">Show the virtual calculator</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="image">img_edit_menu_calculator</property>
+                    <signal name="clicked" handler="on_btn_show_calc_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">7</property>
+                    <property name="position">8</property>
                   </packing>
                 </child>
                 <child>
