--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -695,6 +695,26 @@
     <property name="visible">True</property>
     <property name="can-focus">False</property>
   </object>
+  <object class="GtkImage" id="img_tool_delete">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
+  <object class="GtkImage" id="img_tool_save">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
+  <object class="GtkImage" id="img_tool_reload">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
+  <object class="GtkImage" id="img_tool_add">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
+  <object class="GtkImage" id="img_tool_calculator">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
   <object class="GtkListStore" id="lstst_icon_themes">
     <columns>
       <!-- column-name path -->
@@ -7405,18 +7425,11 @@ MDI history</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <child>
-                  <object class="GtkButton" id="btn_delete_tool">
-                    <property name="label" translatable="yes">Delete</property>
-                    <property name="use-action-appearance">False</property>
+                  <object class="GtkLabel" id="lbl_empty_0_tool">
                     <property name="width-request">90</property>
                     <property name="height-request">56</property>
                     <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes">delete selected tool or tools</property>
-                    <property name="halign">center</property>
-                    <property name="valign">center</property>
-                    <signal name="clicked" handler="on_btn_delete_tool_clicked" swapped="no"/>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -7425,18 +7438,11 @@ MDI history</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="btn_add_tool">
-                    <property name="label" translatable="yes">Add</property>
-                    <property name="use-action-appearance">False</property>
+                  <object class="GtkLabel" id="lbl_empty_1_tool">
                     <property name="width-request">90</property>
                     <property name="height-request">56</property>
                     <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes">add a new tool to tool table</property>
-                    <property name="halign">center</property>
-                    <property name="valign">center</property>
-                    <signal name="clicked" handler="on_btn_add_tool_clicked" swapped="no"/>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -7445,18 +7451,11 @@ MDI history</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="btn_reload_tooltable">
-                    <property name="label" translatable="yes">Reload</property>
-                    <property name="use-action-appearance">False</property>
+                  <object class="GtkLabel" id="lbl_empty_2_tool">
                     <property name="width-request">90</property>
                     <property name="height-request">56</property>
                     <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes">reload tool table from file</property>
-                    <property name="halign">center</property>
-                    <property name="valign">center</property>
-                    <signal name="clicked" handler="on_btn_reload_tooltable_clicked" swapped="no"/>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -7465,18 +7464,11 @@ MDI history</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="btn_apply_tool_changes">
-                    <property name="label" translatable="yes">Apply</property>
-                    <property name="use-action-appearance">False</property>
+                  <object class="GtkLabel" id="lbl_empty_3_tool">
                     <property name="width-request">90</property>
                     <property name="height-request">56</property>
                     <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes">apply the changes you made, G43 will be executed only if it is active G-code</property>
-                    <property name="halign">center</property>
-                    <property name="valign">center</property>
-                    <signal name="clicked" handler="on_btn_apply_tool_changes_clicked" swapped="no"/>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
